style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');

/* style.css */

/*this rounds the corners of the images*/

img {
    border-radius: 25px;
    height: 200px;
    width: 200px;
}

/*this selector sets the four main parts of the page to fill the same space*/

body {
    font-family: "Roboto", sans-serif;
    width: 100vw;
    margin: 0;
    box-sizing: border-box;
}

button {
    background-color: #3882F6;
    color: white;
    text-align: center;
    border: none;
    padding: 15px 32px;
    text-decoration: none;
    font-size: 16px;
    border-radius: 12px;
}

.topmost,
.quote,
.information,
.cta {
    flex: 1 0 auto;
    /*height: 400px;*/
}

.header,
.hero,
.information,
.quote,
.cta {
    max-width: 1000px;
    margin: 0 auto;
   /* height: 300px; */
}

.box-wrapper,
.topbox,
.quote-wrapper {
    display: flex;
    flex: 1 0 auto;
    width: 100vw;
    justify-content: center;
    align-items: center;
}

.topbox,
.footer {
    background-color: #1F2937;
}

.topmost {
    height: 350px;
}

/*not there but closer*/
.header {
    display: flex;
    padding: 20px 50px;
    justify-content: center;
    align-items: center;
} 

.logo {
    max-height: 50px;
    max-width: 50px;
}

h1 {
    margin: 0;
}

h2 {
    color: #1F2937;
    font-size: 36px;
    font-weight: 800;
    margin: 0;
}

ul {
    list-style: none;
    padding-left: 0px;
    display: flex;
    gap: 16px;
}

.links {
    margin-left: auto;
}

.header,
.hero,
.footer {
  display: flex;
  color: white;
}

.hero {
    justify-content: space-between;
    align-items: center;
}

.lefthero {
    gap: 16px;
    display: flex;
    flex-direction: column;
}

.herodesc {
    flex-wrap: wrap;
    max-width: 400px;
}

.signup {
    flex: 1 0 auto;
    max-width: 200px;
}

.hero .leaves {
    height: 200px;
    width: 400px;
}
/*adding these dimensions caused the information section to get shrunk down */

.information {
    text-align: center;
    flex: 1 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 25px;
    height: 450px;
}

.container {
    display: flex;
    justify-content: space-evenly;
    gap: 60px;
}


.info {
    max-width: 200px;
}

#info {
    border: 2px solid #3882F6;
}

.quote-wrapper {
    background-color: #E5E7EB;
    height: 350px;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}

.quote {
  flex: 1 0 auto;
  display: flex;
  flex-direction: column;
  margin: 100px 150px;
}

/*the text is not cooperating, why*/
#text {
  font-style: italic;
  font-weight: 100;
  font-size: 36px;
  color: #1F2937;
}

/* until here */

#attribution {
    text-align: right;
    font-weight: 700;
    align-self: flex-end;
    font-size: 24px;
}

.cta {
    display: flex;
    background-color: #3882F6;
    color: white;
    justify-content: space-evenly;
    align-items: center;
    margin: 100px 200px;
    border-radius: 25px;
    height: 150px;
}

.cta button {
    border-radius: 12px;
    border: 2px solid white;
    font-weight: bold;
}

.footer {
  display: flex;
  margin-top: auto;
  justify-content: center;
  align-items: center;
  padding: 32px;
}

